[project]
name = "sshpk"
version = "0.0.1"  # Required
description = "Python SSH Profile Kit"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["python", "ssh", "profile"]

authors = [
  {name = "William Almy", email = "almywilliam@gmail.com" }
]

maintainers = [
  {name = "William Almy", email = "almywilliam@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[project.urls]  # Optional
"Homepage" = "https://github.com/WTAlmy/sshpk"
"Bug Reports" = "https://github.com/WTAlmy/sshpk/issues"
"Source" = "https://github.com/WTAlmy/sshpk"

[project.scripts]
sshpk = "sshpk:main"
